add header/footer, html5, and browser upgrade shim

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,13 +1,21 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
   {% include head.html %}
 
   <body>
 
-    <div class="page-content">
+    <!--[if lt IE 8]>
+            <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
+    <![endif]-->
+
+    {% include header.html %}
+
+    <section>
         {{ content }}
-    </div>
+    </section>
+
+    {% include footer.html %}
 
   </body>
 
