--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,7 +4,7 @@
     <h2>{{ site.description }}</h2>
   </hgroup>
   <nav>
-    <ul>
+    <ul class="hnav">
       <li><a href="{{ site.url }}/">Blog</a></li>
       <li><a href="{{ site.url }}/portfolio">Portfolio</a></li>
       <li><a href="{{ site.url }}/about">About Me</a></li>
