--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,6 @@
 <footer>
   <h1>Contact Me</h1>
-  <ul>
+  <ul class="hnav">
     <li><a href="https://twitter.com/fortruce">@fortruce</a></li>
     <li><a href="https://github.com/fortruce">Github</a></li>
   </ul>
