--- a/_includes/head.html
+++ b/_includes/head.html
@@ -8,4 +8,7 @@
 
   <meta name="description" content="{{ site.description }}">
 
+  <link rel="stylesheet" href="{{ site.url }}/css/normalize.css">
+  <link rel="stylesheet" href="{{ site.url }}/css/main.css">
+
 </head>
