--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,13 +1,22 @@
-<header>
+<header class="header">
   <hgroup>
-    <h1><a href="{{ site.url }}/">{{ site.title }}</a></h1>
-    <h2>{{ site.description }}</h2>
+    <h1 class="header__title"><a href="{{ site.url }}/">{{ site.title }}</a></h1>
+    <h2 class="header__tagline">{{ site.tagline }}</h2>
   </hgroup>
   <nav>
     <ul class="hnav">
-      <li><a href="{{ site.url }}/">Blog</a></li>
-      <li><a href="{{ site.url }}/portfolio">Portfolio</a></li>
-      <li><a href="{{ site.url }}/about">About Me</a></li>
+      <li><a {% unless page.url contains 'about' or page.url contains 'portfolio' %}
+             class="active"
+             {% endunless %}
+             href="{{ site.url }}/">Blog</a></li>
+      <li><a {% if page.url contains 'portfolio' %}
+             class="active"
+             {% endif %}
+             href="{{ site.url }}/portfolio">Portfolio</a></li>
+      <li><a {% if page.url contains 'about' %}
+             class="active"
+             {% endif %}
+             href="{{ site.url }}/about">About Me</a></li>
     </ul>
   </nav>
 </header>
