--- a/_includes/head.html
+++ b/_includes/head.html
@@ -7,8 +7,7 @@
   <title>{{ site.title }}</title>
 
   <meta name="description" content="{{ site.description }}">
-
-  <link rel="stylesheet" href="{{ site.url }}/css/normalize.css">
+  
+  <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="{{ site.url }}/css/main.css">
-
 </head>
