restructure footer and add classes for styling

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,7 +1,7 @@
-<footer>
-  <h1>Contact Me</h1>
-  <ul class="hnav">
+<footer class="footer">
+  <ul class="hnav footer__social">
     <li><a href="https://twitter.com/fortruce">@fortruce</a></li>
     <li><a href="https://github.com/fortruce">Github</a></li>
   </ul>
+  <p class="footer__copy">Copyright &copy 2015 Joseph Rollins. All Rights Reserved.</p>
 </footer>
