--- a/css/main.scss
+++ b/css/main.scss
@@ -54,8 +54,21 @@ header, footer { text-align: center; }
     }
 }
 
+@media all and (max-width: 500px) {
+    .hnav {
+        flex-direction: column;
+
+        li {
+            margin: 5px auto;
+        }
+    }
+}
+
 .hnav {
     text-align: center;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
     
     li {
         width: 120px;
@@ -64,7 +77,7 @@ header, footer { text-align: center; }
 }
 
 section {
-    padding: 50px 0;
+    padding: 50px 20px;
 }
 
 .header {
@@ -86,8 +99,8 @@ section {
     hgroup { margin-bottom: 70px; }
 
     .active {
-        padding: 7px;
-        border: 1px solid $header-text;
+        padding: 3px;
+        border-bottom: 1px solid $header-text;
     }
 
     @include invis-anchor($header-hover);
@@ -98,7 +111,7 @@ section {
 }
 
 article {
-    padding: 50px 20px;
+    padding: 50px 0;
     border-bottom: 1px solid $rule-color;
 
     &:last-child {
