use em's for font-size

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,7 +1,7 @@
 <header class="header">
   <hgroup>
     <h1 class="header__title"><a href="{{ site.url }}/">{{ site.title }}</a></h1>
-    <h2 class="header__tagline">{{ site.tagline }}</h2>
+    <p class="header__tagline">{{ site.tagline }}</p>
   </hgroup>
   <nav>
     <ul class="hnav">
