--- a/css/main.scss
+++ b/css/main.scss
@@ -23,9 +23,14 @@ ul { padding: 0; }
 
 html {
     font-family: $font-stack;
+    font-size: 1em;
     color: $font-primary;
     background: $background;
 }
+
+h1 { font-size: 2.827em; }
+h2 { font-size: 1.999em; }
+h3 { font-size: 1.414em; }
 
 p { line-height: 1.7em; }
 
@@ -88,13 +93,10 @@ section {
     color: $header-text;
     
     .header__title {
-        font-size: 80px;
+        font-size: 5.653em;
         color: inherit;
     }
-    .header__tagline {
-        color: inherit;
-        font-size: 18px;
-    }
+    .header__tagline { margin-top: 5px; }
 
     hgroup { margin-bottom: 70px; }
 
@@ -129,7 +131,6 @@ article {
     margin-bottom: 40px;
 
     .post__header__title {
-        font-size: 32px;
         margin-bottom: 10px;
     }
 }
@@ -148,8 +149,7 @@ article {
     margin-bottom: 40px;
 
     .footer__social {
-        font-size: 18px;
         padding: 20px 0;
     }
-    .footer__copy { font-size: 12px; }
+    .footer__copy { font-size: 0.707em; }
  }
