--- a/css/main.scss
+++ b/css/main.scss
@@ -5,10 +5,10 @@
 
 $font-stack: 'Open Sans', sans-serif;
 $font-primary: #858585;
-$font-header: #545454;
+$font-header: #6f6f6f;
 $hover-color: #6A7791;
 $header-background: #3498DB;
-$background: white;
+$background: #f7f7f7;
 $header-text: white;
 $header-hover: #C9D2ED;
 $rule-color: #efefef;
@@ -28,9 +28,10 @@ html {
     background: $background;
 }
 
-h1 { font-size: 2.827em; }
-h2 { font-size: 1.999em; }
-h3 { font-size: 1.414em; }
+h1 { font-size: 2.441em; }
+h2 { font-size: 1.953em; }
+h3 { font-size: 1.563em; }
+h4 { font-size: 1.25em; }
 
 p { line-height: 1.7em; }
 
@@ -93,7 +94,7 @@ section {
     color: $header-text;
     
     .header__title {
-        font-size: 5.653em;
+        font-size: 4.768em;
         color: inherit;
     }
     .header__tagline { margin-top: 5px; }
@@ -151,5 +152,5 @@ article {
     .footer__social {
         padding: 20px 0;
     }
-    .footer__copy { font-size: 0.707em; }
+    .footer__copy { font-size: 0.8em; }
  }
