remove ~'s and use header include in post

--- a/_includes/post_header.html
+++ b/_includes/post_header.html
@@ -6,6 +6,6 @@
   </h1>
   <time class="post__header__time"
         datetime="{{ include.post.date | date_to_xmlschema }}">
-    ~ {{ include.post.date | date_to_string }} ~
+    {{ include.post.date | date_to_string }}
   </time>
 </header>
