style code border and h-rule differently

--- a/css/main.scss
+++ b/css/main.scss
@@ -12,7 +12,7 @@ $header-background: #3498DB;
 $background: #f7f7f7;
 $header-text: white;
 $header-hover: #C9D2ED;
-$rule-color: #efefef;
+$rule-color: #ccc;
 $max-width: 650px;
 
 a { color: inherit; }
