--- a/_sass/syntax.scss
+++ b/_sass/syntax.scss
@@ -3,6 +3,7 @@
     padding: 0 15px;
     margin: 30px -30px;
     border: 1px solid #ddd;
+    border-radius: 5px;
 }
 .highlight .c { color: #999988; font-style: italic } /* Comment */
 .highlight .err { color: #a61717; background-color: #e3d2d2 } /* Error */
