--- a/css/main.scss
+++ b/css/main.scss
@@ -21,7 +21,14 @@ h1, h2, h3, h4, h5, h6 {
     text-align: center;
     color: $font-header;
 }
-ul { padding: 0; }
+ul { padding-left: 30px; }
+
+ul ul { padding-left: 40px; }
+
+h1 { font-size: 2.441em; }
+h2 { font-size: 1.953em; }
+h3 { font-size: 1.563em; }
+h4 { font-size: 1.25em; }
 
 html {
     font-family: $font-stack;
@@ -30,12 +37,7 @@ html {
     background: $background;
 }
 
-h1 { font-size: 2.441em; }
-h2 { font-size: 1.953em; }
-h3 { font-size: 1.563em; }
-h4 { font-size: 1.25em; }
-
-p { line-height: 1.7em; }
+p, ul { line-height: 1.7em; }
 
 // contain the entire page below header in
 // a responsive centered column
@@ -154,6 +156,7 @@ article {
 
 .footer {
     @include invis-anchor($hover-color);
+    
     border-top: 1px solid $rule-color;
     margin-bottom: 40px;
 
