--- a/_sass/syntax.scss
+++ b/_sass/syntax.scss
@@ -1,8 +1,15 @@
 .highlight  {
     background: #ffffff;
+    border: 1px solid #ddd;
+    border-radius: 5px;
+
+    margin: 30px 0;
+    padding: 10px;
+    
     code {
+        border: none;
         display: block;
-        padding: 15px 30px;
+        padding: none;
     }
 }
 .highlight .c { color: #999988; font-style: italic } /* Comment */
